done with users pagination for admin view, fixed user display gaps

--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,26 @@
-
 :root {
   --blue: #0056b3;
   --white: #ffffff;
   --gray: rgba(255, 255, 255, 1);
   --dark: #333;
 }
-h1{
+
+h1 {
   color: white;
 }
+
 button {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   padding: 10px 10px;
-  background-color:var(--blue);
+  background-color: var(--blue);
   color: #fff;
   border: none;
   border-radius: 10px;
   cursor: pointer;
   margin-top: 7px;
-  margin-right: 7px; 
+  margin-right: 7px;
   margin-bottom: 2px;
   font-weight: bold;
 }
@@ -50,6 +51,7 @@ div.error {
   border-radius: 4px;
   margin: 20px 0;
 }
+
 input.error {
   border: 1px solid var(--error);
 }
@@ -107,7 +109,7 @@ nav button {
   margin-left: 10px;
 }
 
-.links{
+.links {
   padding: 10px 10px;
   color: #333;
   border: none;
@@ -116,21 +118,23 @@ nav button {
   font-size: 1.1em;
   margin-left: 10px;
   font-weight: bold;
- 
+
 }
 
-.links a:hover{
+.links a:hover {
   color: #fff;
 
 }
 
 .sidenavbarcontainer {
-  width: 180px; /* Adjust the width as needed */
+  width: 180px;
+  /* Adjust the width as needed */
   height: 100%;
   position: fixed;
   top: 70px;
   left: 0;
-  background-color: white; /* Background color of the navbar */
+  background-color: white;
+  /* Background color of the navbar */
 }
 
 .sidenavbarlinks {
@@ -146,9 +150,11 @@ nav button {
 }
 
 .sidenavbarlinks a:hover {
-  background-color: #bcbcbc; /* Background color when hovered */
+  background-color: #bcbcbc;
+  /* Background color when hovered */
 }
-.material-symbols-outlined.sidebar{
+
+.material-symbols-outlined.sidebar {
   position: relative;
   top: 5px;
   padding-right: 5px;
@@ -163,7 +169,8 @@ nav button {
   font-weight: bold;
 }
 
-.course-dropdown:hover, .course-submenu a:hover {
+.course-dropdown:hover,
+.course-submenu a:hover {
   background-color: #bcbcbc;
 }
 
@@ -187,21 +194,46 @@ nav button {
 }
 
 .pagination {
-  position: absolute;
-  bottom: 20px; /* Adjust distance from the bottom */
-  left: 50%;
+
+  margin: 0 57%; /*center plus some more to account for the left nav bar.*/
+  bottom: 5px;
+  left: 640px;
   transform: translateX(-50%);
   display: flex;
   justify-content: center;
-  padding: 20px 0; /* Adjust padding as needed */
+  padding: 20px 0;
+  padding-top: 10px;
+}
+
+.pagination button {
+  padding: 10px 15px;
+  border: 3px solid #000000;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: #000000;
+  text-decoration: none;
+  cursor: pointer;
+
 }
 
 .page-item {
-  margin: 0 5px; /* Adjust margin between buttons */
+  margin: 0 5px;
+  /* Adjust margin between buttons */
+}
+
+.active button{
+  border: 3px solid #ffffff;
+  background-color: #777777;
+  color: white;
+
+}
+.active button:hover {
+  background-color: #777777;
 }
 
 .page-link {
-  padding: 10px 15px; /* Adjust padding as needed */
+  padding: 10px 15px;
+  /* Adjust padding as needed */
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f0f0f0;
@@ -212,4 +244,9 @@ nav button {
 
 .page-link:hover {
   background-color: #e0e0e0;
+}
+
+.users-header{
+  margin-left: 10%;
+  padding-bottom: 0;
 }
